GM only:alphax-8chan

--- a/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
@@ -19,7 +19,7 @@ pins:
     meta: MM176_IN_MAP1_ANALOG
     function: Aux Analog 4
     class: analog_inputs
-    ts_name: 2A - MAP / Aux Analog 4
+    ts_name: 2A - Aux Analog 4
     color: violet
 
   - pin: 3A
