TS buttons into Lua counters

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2155,6 +2155,7 @@ menuDialog = main
 		subMenu = auxInputsDialog,			"Lua Analog Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = luaDigitalInputsDialog,   "Lua Digital Inputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		subMenu = luaOutputs,				"Lua Script PWM Outputs", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
+		subMenu = luaCommands, "Lua Buttons", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 
 		groupMenu = "Lua Calibrations", { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		groupChildMenu = scriptSetting,		"Lua Script Settings"
@@ -2383,6 +2384,10 @@ cmd_test_check_engine_light	= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENC
 cmd_test_idle_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_IDLE_VALVE_16_hex@@"
 cmd_test_second_idle_valve		= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_SECOND_IDLE_VALVE_16_hex@@"
 cmd_test_hpfp_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_HPFP_VALVE_16_hex@@"
+cmd_test_lua_command_1				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_LUA_COMMAND_1_16_hex@@"
+cmd_test_lua_command_2				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_LUA_COMMAND_2_16_hex@@"
+cmd_test_lua_command_3				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_LUA_COMMAND_3_16_hex@@"
+cmd_test_lua_command_4				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_LUA_COMMAND_4_16_hex@@"
 cmd_test_acr_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_HD_ACR_16_hex@@"
 cmd_test_acr2_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_HD_ACR2_16_hex@@"
 cmd_test_vvt0_valve				= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_BENCH_CATEGORY_16_hex@@@@bench_mode_e_BENCH_VVT0_VALVE_16_hex@@"
@@ -5236,6 +5241,12 @@ dialog = tcuControls, "Transmission Settings"
 
 	indicatorPanel = acrActiveDiagPanel, 1, { 1 }
 		indicator = { acrActive }, "ACR off", "ACR on", white, black, green, black
+
+  dialog = luaCommands, "Lua Buttons"
+		commandButton = "Lua Button #1",	cmd_test_lua_command_1
+		commandButton = "Lua Button #2",	cmd_test_lua_command_2
+		commandButton = "Lua Button #3",	cmd_test_lua_command_3
+		commandButton = "Lua Button #4",	cmd_test_lua_command_4
 
 	dialog = harleyAcr, "Harley Automatic Compression Release"
 		field = "Pin",	acrPin@@if_ts_show_acr_pins
