Make trailing spark angle a 3D table #5248
* added a new table "trailingSparkAngle"
* removed trailingSparkAngle as config on rusefi.txt
* added trailingSparkAngle as variable on ignition state
* bump FLASH_DATA_VERSION

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1193,6 +1193,12 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
 		upDownLabel = "(RICHER)", "(LEANER)"
 
+	table = trailingSparkTable, trailingSparkMap, "Trailing spark", 1
+		xyLabels = "RPM", "Ignition Load"
+		xBins		= trailingSparkRpmBins,  RPMValue
+		yBins		= trailingSparkLoadBins,  ignitionLoad
+		zBins		= trailingSparkTable
+
 	table = torqueTableTbl, torqueTableMap, "Engine Torque", 1
 		xBins		= torqueRpmBins, RPMValue
 		yBins		= torqueLoadBins, veTableYAxis
@@ -5211,11 +5217,11 @@ dialog = tcuControls, "Transmission Settings"
 
 	dialog = rotaryDialog, "Rotary"
 		field = "Enable Trailing Sparks", enableTrailingSparks
-		field = "Trailing Spark Offset", trailingSparkAngle
 		field = "Trailing Pin 1",						trailingCoilPins1
 		field = "Trailing Pin 2",						trailingCoilPins2
 		field = "Trailing Pin 3",						trailingCoilPins3
 		field = "Trailing Pin 4",						trailingCoilPins4
+		panel = trailingSparkTable
 
 		@@BOARD_OPTIONS_FROM_FILE@@
 
