--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1936,6 +1936,7 @@ menuDialog = main
 
 	menu = "&Base &Engine"
 		subMenu = engineChars,				"Base engine"
+		subMenu = dynoChars,				"Virtual Dyno engine"
 
 		groupMenu = "Limits and protection", {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		  groupChildMenu = limitsAndFallback,		"Limits and fallbacks"
@@ -4527,6 +4528,23 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = engineMetadata, {1}, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		panel = fuelStrategyPanel@@if_ts_show_fuel_strategy
 		panel = debugging@@if_ts_show_debug_mode
+
+	dialog = dynoChars, "Virtual Dyno Settings"
+	  field =  dynoRpmStep, dynoRpmStep
+	  field =  dynoSaeTemperatureC, dynoSaeTemperatureC
+	  field =  dynoSaeRelativeHumidity, dynoSaeRelativeHumidity
+	  field =  dynoSaeBaro, dynoSaeBaro
+	  field =  dynoCarWheelDiaInch, dynoCarWheelDiaInch
+	  field =  dynoCarWheelAspectRatio, dynoCarWheelAspectRatio
+	  field =  dynoCarWheelTireWidthMm, dynoCarWheelTireWidthMm
+	  field =  dynoCarGearPrimaryEduction, dynoCarGearPrimaryEduction
+	  field =  dynoCarGearRatio, dynoCarGearRatio
+	  field =  dynoCarGearFinalDrive, dynoCarGearFinalDrive
+	  field =  dynoCarCarMassKg, dynoCarCarMassKg
+	  field =  dynoCarCargoMassKg, dynoCarCargoMassKg
+	  field =  dynoCarCoeffOfDrag, dynoCarCoeffOfDrag
+	  field =  dynoCarFrontalAreaM2, dynoCarFrontalAreaM2
+
 
 	dialog = crankingFuel, "Fuel"
 		field = "Injection mode",						crankingInjectionMode
