--- a/java_console/inifile/build.gradle
+++ b/java_console/inifile/build.gradle
@@ -4,7 +4,8 @@ dependencies {
     api project(':logging-api')
     api project(':core_io')
     // intention is to have happy self-contained shadowJar compatible both with java 8 and 11+
-    api "jakarta.xml.bind:jakarta.xml.bind-api:3.0.0"
-    api "com.sun.xml.bind:jaxb-impl:3.0.0"
+    api 'org.glassfish.jaxb:jaxb-xjc:4.0.3'
+    api 'org.glassfish.jaxb:jaxb-runtime:4.0.3'
+    api 'org.glassfish.jaxb:jaxb-core:4.0.3'
     api 'javax.activation:activation:1.1.1'
 }
