Add GPPWM oil temp/pressure, also fix some

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -219,13 +219,13 @@ enable2ndByteCanID = false
 
 [PcVariables]
 	fuelUnits = bits, U08, [0:2], "kPa", "MAF", "%TPS", "Lua"
-	pwmAxisLabels = bits, U08, [0:5], "Zero", "TPS %", "MAP kPa", "CLT C", "IAT C", "Fuel Load", "Ignition Load", "Aux Temp 1 C", "Aux Temp 2 C", "Accel Pedal %", "Battery Voltage Volts", "VVT 1 I Deg", "VVT 1 E Deg", "VVT 2 I Deg", "VVT 2 E Deg", "Ethanol (Flex) %", "Aux Linear 1 *", "Aux Linear 2 *", "GPPWM Output 1 %", "GPPWM Output 2 %", "GPPWM Output 3 %", "GPPWM Output 4 %", "Lua Gauge 1", "Lua Gauge 2", "RPM", "Gear (detected)", "Baro pressure kPa", "EGT 1 C", "EGT 2 C", "INVALID", "INVALID", "INVALID"
+	pwmAxisLabels = bits, U08, [0:5], "Zero", "TPS %", "MAP kPa", "CLT C", "IAT C", "Fuel Load", "Ignition Load", "Aux Temp 1 C", "Aux Temp 2 C", "Accel Pedal %", "Battery Voltage Volts", "VVT 1 I Deg", "VVT 1 E Deg", "VVT 2 I Deg", "VVT 2 E Deg", "Ethanol (Flex) %", "Aux Linear 1 *", "Aux Linear 2 *", "GPPWM Output 1 %", "GPPWM Output 2 %", "GPPWM Output 3 %", "GPPWM Output 4 %", "Lua Gauge 1", "Lua Gauge 2", "RPM", "Gear (detected)", "Baro pressure kPa", "EGT 1 C", "EGT 2 C", "Aux Linear 3", "Aux Linear 4", "Vehicle Speed KPH", "Oil pressure kPa", "Oil temp C"
 	veAxisLabels = bits, U08, [0:1], "load", "MAP", "TPS"
 	targetAfrAxisLabels = bits, U08, [0:2], "load", "MAP", "TPS", "Acc Pedal", "Cyl Filling %"
 
 	tuneCrcPcVariable = continuousChannelValue, tuneCrc16
 
-	wueAfrTargetOffset = array, S16, [ 16], ":1",	0.1, 0.0, -3.0, 3.0, 1;
+	wueAfrTargetOffset = array, S16, [ 16], ":1",	0.1, 0.0, -3.0, 3.0, 1
 	wueAnalRecommend	= array, U08, [ 16], "%",  1.00, 0.0, 100, 255.00, 0
 
 	gearCountArray = array, S08, [@@TCU_GEAR_COUNT@@], "Gear", 1, 0, -1, { @@TCU_GEAR_COUNT@@ - 2 }, 0, noMsqSave
