- dynoview TS improve

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4535,22 +4535,33 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = fuelStrategyPanel@@if_ts_show_fuel_strategy
 		panel = debugging@@if_ts_show_debug_mode
 
+    dialog = dynoCharsBase, "Base Settings"
+    	  field =  dynoCarCarMassKg, dynoCarCarMassKg
+    	  field =  dynoCarCargoMassKg, dynoCarCargoMassKg
+    	  field =  dynoCarCoeffOfDrag, dynoCarCoeffOfDrag
+    	  field =  dynoCarFrontalAreaM2, dynoCarFrontalAreaM2
+
+    dialog = dynoCharsSaeCorrections, "Sae Corrections"
+    	  field =  dynoSaeTemperatureC, dynoSaeTemperatureC
+    	  field =  dynoSaeRelativeHumidity, dynoSaeRelativeHumidity
+    	  field =  dynoSaeBaro, dynoSaeBaro
+
+    dialog = dynoCharsWheels, "Wheels"
+    	  field =  dynoCarWheelDiaInch, dynoCarWheelDiaInch
+    	  field =  dynoCarWheelAspectRatio, dynoCarWheelAspectRatio
+    	  field =  dynoCarWheelTireWidthMm, dynoCarWheelTireWidthMm
+
+    dialog = dynoCharsGears, "Gears"
+    	  field =  dynoCarGearPrimaryReduction, dynoCarGearPrimaryReduction
+    	  field =  dynoCarGearRatio, dynoCarGearRatio
+    	  field =  dynoCarGearFinalDrive, dynoCarGearFinalDrive
+
 	dialog = dynoChars, "Virtual Dyno Settings"
 	  field =  dynoRpmStep, dynoRpmStep
-	  field =  dynoSaeTemperatureC, dynoSaeTemperatureC
-	  field =  dynoSaeRelativeHumidity, dynoSaeRelativeHumidity
-	  field =  dynoSaeBaro, dynoSaeBaro
-	  field =  dynoCarWheelDiaInch, dynoCarWheelDiaInch
-	  field =  dynoCarWheelAspectRatio, dynoCarWheelAspectRatio
-	  field =  dynoCarWheelTireWidthMm, dynoCarWheelTireWidthMm
-	  field =  dynoCarGearPrimaryEduction, dynoCarGearPrimaryEduction
-	  field =  dynoCarGearRatio, dynoCarGearRatio
-	  field =  dynoCarGearFinalDrive, dynoCarGearFinalDrive
-	  field =  dynoCarCarMassKg, dynoCarCarMassKg
-	  field =  dynoCarCargoMassKg, dynoCarCargoMassKg
-	  field =  dynoCarCoeffOfDrag, dynoCarCoeffOfDrag
-	  field =  dynoCarFrontalAreaM2, dynoCarFrontalAreaM2
-
+	  panel =  dynoCharsBase
+	  panel =  dynoCharsSaeCorrections
+	  panel =  dynoCharsWheels
+	  panel =  dynoCharsGears
 
 	dialog = crankingFuel, "Fuel"
 		field = "Injection mode",						crankingInjectionMode
