--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4536,28 +4536,28 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = debugging@@if_ts_show_debug_mode
 
     dialog = dynoCharsBase, "Base Settings"
-    	  field =  dynoCarCarMassKg, dynoCarCarMassKg
-    	  field =  dynoCarCargoMassKg, dynoCarCargoMassKg
-    	  field =  dynoCarCoeffOfDrag, dynoCarCoeffOfDrag
-    	  field =  dynoCarFrontalAreaM2, dynoCarFrontalAreaM2
+    	  field =  "Car mass", dynoCarCarMassKg
+    	  field =  "Cargo mass", dynoCarCargoMassKg
+    	  field =  "Drag coefficient", dynoCarCoeffOfDrag
+    	  field =  "Frontal car area", dynoCarFrontalAreaM2
 
     dialog = dynoCharsSaeCorrections, "Sae Corrections"
-    	  field =  dynoSaeTemperatureC, dynoSaeTemperatureC
-    	  field =  dynoSaeRelativeHumidity, dynoSaeRelativeHumidity
-    	  field =  dynoSaeBaro, dynoSaeBaro
+    	  field =  "Air temperature", dynoSaeTemperatureC
+    	  field =  "Relative air humidity", dynoSaeRelativeHumidity
+    	  field =  "Atmospheric pressure", dynoSaeBaro
 
     dialog = dynoCharsWheels, "Wheels"
-    	  field =  dynoCarWheelDiaInch, dynoCarWheelDiaInch
-    	  field =  dynoCarWheelAspectRatio, dynoCarWheelAspectRatio
-    	  field =  dynoCarWheelTireWidthMm, dynoCarWheelTireWidthMm
+    	  field =  "Disc diameter", dynoCarWheelDiaInch
+    	  field =  "Tyre height", dynoCarWheelAspectRatio
+    	  field =  "Tire width", dynoCarWheelTireWidthMm
 
     dialog = dynoCharsGears, "Gears"
-    	  field =  dynoCarGearPrimaryReduction, dynoCarGearPrimaryReduction
-    	  field =  dynoCarGearRatio, dynoCarGearRatio
-    	  field =  dynoCarGearFinalDrive, dynoCarGearFinalDrive
+    	  field =  "Primary reduction", dynoCarGearPrimaryReduction
+    	  field =  "Gear ratio", dynoCarGearRatio
+    	  field =  "Final drive", dynoCarGearFinalDrive
 
 	dialog = dynoChars, "Virtual Dyno Settings"
-	  field =  dynoRpmStep, dynoRpmStep
+	  field =  "Rpm trim window", dynoRpmStep
 	  panel =  dynoCharsBase
 	  panel =  dynoCharsSaeCorrections
 	  panel =  dynoCharsWheels
