mmc_card: automaticly mount as MSD on USB connection
Remove alwaysWriteSdCard and introduce sdAutoModeSwitching
Also remove 15 sec delay on start

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4416,7 +4416,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "#and USB not connected for 15 seconds"
 		field = "#OR when Always start in Logging mode is enabled"
 		field = "#rusEFI connects SD to your PC when powered by USB"
-		field = "Always start in Logging mode",			alwaysWriteSdCard, { isSdCardEnabled }
+		field = "Automaticly mount SD over USB",		sdAutoModeSwitching, { isSdCardEnabled }
 		field = "SD logger rate",						sdCardLogFrequency, { isSdCardEnabled }
 		field = "SD logger mode",						sdTriggerLog, { isSdCardEnabled }
 
