mmc_card: some renames

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1903,7 +1903,7 @@ gaugeCategory = GPPWM Outputs
 	; not implemented
 	; indicator = { ind_map_error}, "map",	"map error",	white, black, red,	black
 	indicator =					{ sd_present },			"No SD card",	"SD card present",  white,  black,  green,  black
-	indicator =		{ sd_logging_internal },		"No SD logging",		"SD logging",  white,  black,  green,  black
+	indicator =		{ sd_logging },		"No SD logging",		"SD logging",  white,  black,  green,  black
 	indicator =							{ sd_msd },			"No SD USB",				"SD USB",  white,  black,  green,  black
 ;	indicator =		{ sd_active_wr },		"SD WR",		"SD WR",  white,  black,  green,  black
 ;	indicator =		{ sd_active_rd },		"SD RD",		"SD RD",  white,  black,  green,  black
@@ -4427,7 +4427,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		commandButton = "Format",						cmd_format
 
 	indicatorPanel = sdCardStateIndicators, 2, { isSdCardEnabled }
-		indicator = { sd_logging_internal }, "No SD logging", "SD logging", white, black, green, black
+		indicator = { sd_logging }, "No SD logging", "SD logging", white, black, green, black
 		indicator = { sd_msd }, "No SD USB", "SD USB",  white,  black,  green,  black
 
 	indicatorPanel = sdCardErrorReportIndicators, 1, { isSdCardEnabled }
