mmc: SD card logger failed indicator to TS

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -4430,6 +4430,9 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		indicator = { sd_logging }, "No SD logging", "SD logging", white, black, green, black
 		indicator = { sd_msd }, "No SD USB", "SD USB",  white,  black,  green,  black
 
+	indicatorPanel = sdCardLoggerStateIndicators, 2, { isSdCardEnabled }
+		indicator = { sd_logging_failed }, "SD logging OK", "SD logging failed", white, black, red, black
+
 	indicatorPanel = sdCardErrorReportIndicators, 1, { isSdCardEnabled }
 		indicator = { hasFaultReportFile }, "No error reports", "Error report on SD", white, black, red, black
 
@@ -4443,6 +4446,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = sdPresentIndicators
 		panel = sdCardActivityIndicators
 		panel = sdCardLogging
+		panel = sdCardLoggerStateIndicators
 		panel = sdCardStateIndicators
 		panel = sdCardCommands
 		panel = sdReportCommands
