Uaefi121 wrong pinout. #7457 only:uaefi

--- a/firmware/config/boards/hellen/uaefi121/connectors/uaefi121.yaml
+++ b/firmware/config/boards/hellen/uaefi121/connectors/uaefi121.yaml
@@ -333,7 +333,7 @@ pins:
 
   - pin: 50a
     class: outputs
-    meta: MM100_MEGA_UAEFI_SPI2_SCK
+    meta: MM100_SPI2_CS
     ts_name: ___ INJ_7
     function: Injector 7
     color: white
@@ -341,7 +341,7 @@ pins:
 
   - pin: 51a
     class: outputs
-    meta: MM100_SPI2_SCK
+    meta: MM100_MEGA_UAEFI_SPI2_SCK
     ts_name: ___ INJ_8
     function: Injector 8
     color: green
