--- a/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
+++ b/firmware/config/boards/hellen/alphax-8chan/connectors/8chan-A-B.yaml
@@ -377,6 +377,7 @@ pins:
 
 info:
   title: AlphaX Platinum
+  cid: ab
   name: AlphaX Platinum
   # directory see D.yaml
   board_url: https://rusefi.com/s/8chan
