--- a/firmware/config/boards/hellen/hellen-hyundai-pb-mt/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen-hyundai-pb-mt/connectors/main.yaml
@@ -396,6 +396,7 @@ pins:
 
 info:
   board_url: https://github.com/rusefi/rusefi/wiki/Hellen-Hyundai-PB
+  cid: main
   directory: hellen/hellen-hyundai-pb-mt
   title: Hellen Hyundai PB MT
   image:
