--- a/firmware/config/boards/hellen/hellen81/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen81/connectors/main.yaml
@@ -512,6 +512,7 @@ pins:
     function: CAN-L (ME7.8.8-compatible)
 
 info:
+  cid: main
   board_url: https://github.com/rusefi/rusefi/wiki/Hellen81
   title: Hellen 81
   directory: hellen/hellen81
