--- a/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
+++ b/firmware/config/boards/hellen/hellen121vag/connectors/main.yaml
@@ -450,6 +450,7 @@ pins:
 
 info:
   title: Hellen 121 VAG
+  cid: main
   name: Hellen 121 VAG
   board_url: https://github.com/rusefi/rusefi/wiki/Hellen121VAG
   directory: hellen/hellen121vag
