pasta strikes again!

--- a/firmware/config/boards/hellen/alphax-gold/connectors/34pins-3k-A.yaml
+++ b/firmware/config/boards/hellen/alphax-gold/connectors/34pins-3k-A.yaml
@@ -166,7 +166,7 @@ info:
   cid: main
   order: 0
   title: AlphaX Gold
-  directory: hellen/alphax-platinum
+  directory: hellen/alphax-gold
   name: AlphaX Gold
   image:
     file: 34pins-3k.jpg
