--- a/firmware/config/boards/hellen/alphax-gold/connectors/34pins-4k-B.yaml
+++ b/firmware/config/boards/hellen/alphax-gold/connectors/34pins-4k-B.yaml
@@ -101,7 +101,7 @@ info:
   cid: 34-4
   order: 1
   title: AlphaX Gold
-  directory: hellen/alphax-platinum
+  directory: hellen/alphax-gold
   name: AlphaX Gold
   image:
     file: 34pins-4k.jpg
