--- a/firmware/config/boards/hellen/small-can-board/connectors/small.yaml
+++ b/firmware/config/boards/hellen/small-can-board/connectors/small.yaml
@@ -150,6 +150,7 @@ pins:
 
 info:
   title: Small CAN
+  cid: small
   name: Small CAN
   board_url: https://rusefi.com/s/scan
   directory: hellen/small-can-board
