TS: rework fuel level dialog

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -682,7 +682,6 @@ enable2ndByteCanID = false
 		yAxis		= 0, 100, 11
 		xBins		= fuelLevelBins
 		yBins		= fuelLevelValues
-		gauge		= fuelTankLevelGauge
 
 	curve = wueAfrTargetOffsetCurve, "AFR Target Temperature Adjustment"
 		columnLabel = "Coolant", "AFR Offset"
@@ -3248,13 +3247,21 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Throttle inlet pressure sensor",			throttleInletPressureChannel
 		field = "Compressor discharge pressure sensor",		compressorDischargePressureChannel
 
-	dialog = fuelLevelDialog,		"Fuel Level Sensor"
+	dialog = fuelLevelGauges
+		gauge = rawFuelLevelGauge
+		gauge = fuelTankLevelGauge
+
+	dialog = fuelLevelSettings
 		field = "Input channel",	fuelLevelSensor
 		field = "Low threshold",	fuelLevelLowThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}
 		field = "High threshold",	fuelLevelHighThresholdVoltage, {fuelLevelSensor != @@ADC_CHANNEL_NONE@@}
 		field = "Filter Alpha",		fuelLevelAveragingAlpha
 		field = "Update period",	fuelLevelUpdatePeriodSec
 		panel = fuelLevelCurve
+
+	dialog = fuelLevelDialog, "Fuel Level Sensor", border
+		panel = fuelLevelSettings, West
+		panel = fuelLevelGauges, East
 
 ;
 ; allXXX sections allows a quick overview of used I/O in order to address conflicts mostly, not really to
