--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2230,7 +2230,7 @@ menuDialog = main
 		subMenu = std_separator
 
 		# SENT interface
-		subMenu = sentInputs				"SENT inputs"
+		subMenu = sentInputs,				"SENT inputs"
 		subMenu = std_separator
 
 		# Misc sensors
@@ -2287,7 +2287,7 @@ menuDialog = main
 
 		subMenu = allPins1,					"Full pinout 1/3" @@if_ts_show_full_pinout
 		subMenu = allPins2,					"Full pinout 2/3" @@if_ts_show_full_pinout
-		subMenu = allPins3_1_and_2		"Full pinout 3/3" @@if_ts_show_full_pinout
+		subMenu = allPins3_1_and_2,		"Full pinout 3/3" @@if_ts_show_full_pinout
 
 		subMenu = std_separator@@if_ts_show_gdi
 		subMenu = mc33Dialog,									"PT2001 control"@@if_ts_show_gdi
@@ -3551,7 +3551,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 
 	dialog = fuelhip_settings, "Fuel High Pressure Sensor"
 		field = "Sensor SENT type"						FuelHighPressureSentType
-		field = "Sensor SENT input"						FuelHighPressureSentInput, {FuelHighPressureSentType != 0 }
+		field = "Sensor SENT input",					FuelHighPressureSentInput, {FuelHighPressureSentType != 0 }
 		field = "Analog input",							highPressureFuel_hwChannel, {FuelHighPressureSentType == 0 }
 		panel = fuelhip_analog_settings, {FuelHighPressureSentType == 0 && highPressureFuel_hwChannel != @@ADC_CHANNEL_NONE@@}
 
