program ini file pattern error #7469

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2258,7 +2258,7 @@ menuDialog = main
 		subMenu = canBusMain,				"CAN Bus Settings"@@if_ts_show_top_level_can_menu
 		subMenu = std_separator@@if_ts_show_top_level_can_menu
 
-		subMenu = speedSensorCan			"CAN Vehicle speed sensor"@@if_ts_show_top_level_can_menu
+		subMenu = speedSensorCan,			"CAN Vehicle speed sensor"@@if_ts_show_top_level_can_menu
 		subMenu = uegoCan,					"CAN O2 sensors"@@if_ts_show_top_level_can_menu
 		subMenu = egtInputsCan,				"CAN EGT sensors"@@if_ts_show_top_level_can_menu
 		subMenu = msIoBox,					"CAN MS IO-Box Settings"@@if_ts_show_top_level_can_menu
