--- a/firmware/config/boards/hellen/alphax-gold/connectors/34pins-4k-B.yaml
+++ b/firmware/config/boards/hellen/alphax-gold/connectors/34pins-4k-B.yaml
@@ -174,7 +174,7 @@ pins:
     ts_name: ___ DC-
     function: DC- output
     type: etb
-
+    color: white
 
   - pin: 27B
     class: event_inputs
